# dynamodb2-mapper

./: README.md  README.rst  requirements.txt  setup.cfg  setup.py
dynamodb2_mapper/: attribute.py  defaults.py  exceptions.py  migration.py  model.py  transactions.py  types.py
dynamodb2_mapper/tests/: test_migrations.py  test_model.py  test_transactions.py
