[metadata]
name = dynamodb2-mapper
version = 0.0.1
summary = Object mapper for Amazon DynamoDB2
description-file = README.rst
author = Senol Korkmaz
author_email = senol.korkmaz@gmail.com
maintainer = Senol Korkmaz
maintainer_email = senol.korkmaz@gmail.com
home_page = https://github.com/sxnol/dynamodb2-mapper
classifier =
    Topic :: Internet
    Topic :: Database :: Front-Ends
    Operating System :: OS Independent
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
requires-dist =
#    https://github.com/kain-jy/boto/archive/develop.zip

[noah]
public = True

[files]
packages =
    dynamodb2_mapper
    dynamodb2_mapper.tests

[nosetests]
where = dynamodb2_mapper
match = ^test
nocapture = 1
cover-package = dynamodb2_mapper
cover-inclusive = 1
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1

